# fast-sttext

./: .env.example  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  .safety-project.ini  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  entrypoint.sh  example.py  pyproject.toml  requirements.txt  setup.sh  test_system.py
.github/workflows/: fast-stext.yaml  release.yaml  safety-scan.yaml
.githug/workflows/: fast-stext.yaml
credentials/: service-account-key.json
input/: sample.txt  test_book.txt  test_doc.txt
src/: audio_processor.py  config.py  file_handler.py  main.py  text_processor.py  tts_engine.py
