[project]
name = "fast-sttext"
version = "0.1.0"
description = "A fast text processing library."
authors = [{ name = "Your Name", email = "santos.barrel@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["google-cloud-texttospeech"]

[project.urls]
Homepage = "https://github.com/diogobarrel/fast-sttext"
Repository = "https://github.com/diogobarrel/fast-sttext"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
